# mojo-libffi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ffi_repl.mojo  mylib.c
src/ffi/: __init__.mojo
